--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/saved_faceted_searches_selector_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/saved_faceted_searches_selector_widget_template.xhtml
@@ -1,18 +1,16 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:f="http://java.sun.com/jsf/core"
-        id="savedFacetedSearchSelectorDiv">
+  xmlns:f="http://java.sun.com/jsf/core"
+  id="savedFacetedSearchSelectorDiv">
 
-  <p><h:outputText value="#{messages['label.saved.searches']}" /></p>
-  <h:selectOneMenu
-          value="#{facetedSearchActions.currentSelectedSavedSearchId}"
-          id="savedFacetedSearchSelector"
-          styleClass="langSelect"
-          onchange="Element.next(this).firstChild.click();">
-    <f:selectItems value="#{savedSearchesSelectItems}"/>
-  </h:selectOneMenu>
+<p><h:outputText value="#{messages['label.saved.searches']}" /></p>
+<h:selectOneMenu
+  value="#{facetedSearchActions.currentSelectedSavedSearchId}"
+  id="savedFacetedSearchSelector" styleClass="langSelect"
+  onchange="Element.next(this).firstChild.click();">
+  <f:selectItems value="#{savedSearchesSelectItems}" />
+</h:selectOneMenu>
 
-  <div style="display: none;">
-    <h:commandButton value="submit"
-                     action="#{facetedSearchActions.loadSelectedSavedSearch(widget.properties.outcome)}"/>
-  </div>
+<div style="display: none;"><h:commandButton value="submit"
+  action="#{facetedSearchActions.loadSelectedSavedSearch(widget.properties.outcome)}" />
+</div>
 </div>
