NXP-5451: add selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -23,7 +23,9 @@
   <tr>
     <td><a href="authorSearch.html">authorSearch</a></td>
   </tr>
-
+  <tr>
+    <td><a href="categorizationSearch.html">categorizationSearch</a></td>
+  </tr>
   </tbody>
 </table>
 </body>
