--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/widgets/faceted_search_actions_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/widgets/faceted_search_actions_widget_template.xhtml
@@ -1,19 +1,24 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:nxu="http://nuxeo.org/nxweb/util" class="facetedSearchActionBar">
+  xmlns:nxu="http://nuxeo.org/nxweb/util"
+  class="facetedSearchActionBar">
 
 <nxu:set var="contentViewName"
   value="#{facetedSearchActions.currentContentViewName}">
 
-  <h:commandLink action="#{facetedSearchActions.clearSearch()}">
+  <h:commandLink action="#{facetedSearchActions.clearSearch()}"
+    immediate="true">
     <h:outputText value="#{messages['command.faceted.search.clear']}" />
   </h:commandLink>
-  <h:commandButton type="submit"
+  <h:commandButton
     value="#{messages['command.faceted.search.go']}"
-    action="faceted_search_results" class="button">
+    action="faceted_search_results"
+    styleClass="button">
     <nxu:actionListenerMethod
       value="#{contentViewActions.refresh(contentViewName)}" />
   </h:commandButton>
+
 </nxu:set>
+
 <div style="clear: both;"></div>
 
 </div>
