NXP-5452: Add Selenium tests for search permlink

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -26,6 +26,9 @@
   <tr>
     <td><a href="categorizationSearch.html">categorizationSearch</a></td>
   </tr>
+  <tr>
+    <td><a href="searchPermlink.html">searchPermlink</a></td>
+  </tr>
   </tbody>
 </table>
 </body>
