NXP-5452: Fix selenium test

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -107,7 +107,7 @@
 	<td>permlinkURL</td>
 </tr>
 <tr>
-	<td>openWindowAndWait</td>
+	<td>open</td>
 	<td>${permlinkURL}</td>
 	<td></td>
 </tr>
@@ -134,11 +134,6 @@
 <tr>
 	<td>verifyNotValue</td>
 	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
-	<td></td>
-</tr>
-<tr>
-	<td>close</td>
-	<td></td>
 	<td></td>
 </tr>
 
