Improve selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -170,7 +170,7 @@
   </tr>
 
   <tr>
-    <td>verifyTextPresent</td>
+    <td>waitForTextPresent</td>
     <td>Categorization</td>
     <td></td>
   </tr>
