--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -65,7 +65,7 @@
     <td></td>
   </tr>
   <tr>
-    <td>verifyTextPresent</td>
+    <td>waitForTextPresent</td>
     <td>Keywords</td>
     <td></td>
   </tr>
