--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -70,7 +70,7 @@
     <td></td>
   </tr>
   <tr>
-    <td>verifyTextPresent</td>
+    <td>waitForTextPresent</td>
     <td>Creation date</td>
     <td></td>
   </tr>
