NXP-5573: selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -27,6 +27,9 @@
     <td><a href="categorizationSearch.html">categorizationSearch</a></td>
   </tr>
   <tr>
+    <td><a href="pathSearch.html">pathSearch</a></td>
+  </tr>
+  <tr>
     <td><a href="searchPermlink.html">searchPermlink</a></td>
   </tr>
   </tbody>
