Fix Selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -79,7 +79,7 @@
     <td>
       facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to
     </td>
-    <td>${currentMonth}/${currentDay}/${currentYear}</td>
+    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
   </tr>
   <tr>
     <td>clickAndWait</td>
@@ -96,7 +96,7 @@
     <td>
       facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from
     </td>
-    <td>${currentMonth}/${currentDay}/${currentYear}</td>
+    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
   </tr>
   <tr>
     <td>type</td>
@@ -147,7 +147,7 @@
     <td>
       facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to
     </td>
-    <td>${currentMonth}/${currentDay}/${currentYear}</td>
+    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
   </tr>
   <tr>
     <td>clickAndWait</td>
@@ -164,7 +164,7 @@
     <td>
       facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_from
     </td>
-    <td>${currentMonth}/${currentDay}/${currentYear}</td>
+    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
   </tr>
   <tr>
     <td>type</td>
