--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -74,7 +74,7 @@
 <tr>
 	<td>type</td>
 	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
-	<td>${currentMonth}/${currentDay}/${currentYear}</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
