NXP-5677: also rewind page provider when performing a new search: refresh does not change current page so it could be empty

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -13,7 +13,7 @@
     <div style="display:none;">
       <h:commandButton action="faceted_search_results">
         <nxu:actionListenerMethod
-          value="#{contentViewActions.refresh(contentViewName)}" />
+          value="#{contentViewActions.refreshAndRewind(contentViewName)}" />
       </h:commandButton>
     </div>
 
