--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/widgets/faceted_search_actions_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/widgets/faceted_search_actions_widget_template.xhtml
@@ -14,7 +14,7 @@
     action="faceted_search_results"
     styleClass="button">
     <nxu:actionListenerMethod
-      value="#{contentViewActions.refresh(contentViewName)}" />
+      value="#{contentViewActions.refreshAndRewind(contentViewName)}" />
   </h:commandButton>
 
 </nxu:set>
