NXP-5704: Fix wrong variable name

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_path_tree_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/nuxeo.war/widgets/faceted_search_path_tree_widget_template.xhtml
@@ -18,11 +18,11 @@
     </c:otherwise>
   </c:choose></h6>
 
-  <h:dataTable value="#{field_0}" var="value"
+  <h:dataTable value="#{field_0}" var="path"
     rendered="#{not empty field_0}">
     <h:column>
       <h:outputText
-            value="#{nxd:titleOrId(treeWidgetActions.getDocumentFromPath(model.rowData))}" />
+            value="#{nxd:titleOrId(treeWidgetActions.getDocumentFromPath(path))}" />
     </h:column>
   </h:dataTable>
 
