NXP-5665: change parameter name from 'contentViewListIndex' to 'contentViewId' in content view template

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -13,7 +13,7 @@
 
     <ui:include src="/incl/message_banner.xhtml" />
 
-    <div id="content"><nxu:set var="contentViewListIndex" value="0">
+    <div id="content"><nxu:set var="contentViewId" value="0">
       <nxu:set var="contentViewName"
         value="#{facetedSearchActions.currentContentViewName}">
 
