--- a/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -18,7 +18,7 @@
     </div>
 
     <nxu:set var="contentView"
-      value="#{contentViewActions.getContentViewWithProvider(contentViewName, null)}"
+      value="#{contentViewActions.getContentViewWithProvider(contentViewName)}"
       cache="true">
       <c:if test="#{contentView != null}">
         <nxl:layout name="#{contentView.searchLayout.name}" mode="search"
