Fix selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -187,7 +187,7 @@
   <tr>
     <td>click</td>
     <td>
-      //div[@id='nxw_dc_coverage_1']/h6/span[2]
+      //div[@id='nxw_dc_coverage_1']/span/span[2]
     </td>
     <td></td>
   </tr>
@@ -271,7 +271,7 @@
   <tr>
     <td>click</td>
     <td>
-      //div[@id='nxw_dc_subjects_1']/h6/span[2]
+      //div[@id='nxw_dc_subjects_1']/span/span[2]
     </td>
     <td></td>
   </tr>
