--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
@@ -157,7 +157,7 @@
   <tr>
     <td>click</td>
     <td>
-      //div[@id='nxw_ecm_path_1']/h6/span[2]
+      //div[@id='nxw_ecm_path_1']/span/span[2]
     </td>
     <td></td>
   </tr>
