Fix broken Selenium tests due to NXP-6131

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -74,7 +74,7 @@
   <td>
     facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1
   </td>
-  <td>Sections</td>
+  <td>Klaatu</td>
 </tr>
 <tr>
   <td>clickAndWait</td>
@@ -88,17 +88,17 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Sections</td>
+  <td>Klaatu</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextNotPresent</td>
-  <td>Workspaces</td>
+  <td>Barada</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextNotPresent</td>
-  <td>Templates</td>
+  <td>Nikto</td>
   <td></td>
 </tr>
 <!-- save the search -->
@@ -125,17 +125,17 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Sections</td>
+  <td>Klaatu</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Workspaces</td>
+  <td>Barada</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Templates</td>
+  <td>Nikto</td>
   <td></td>
 </tr>
 <tr>
@@ -155,21 +155,21 @@
   <td>
     //*[@id='facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1']
   </td>
-  <td>Sections</td>
+  <td>Klaatu</td>
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Sections</td>
+  <td>Klaatu</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextNotPresent</td>
-  <td>Workspaces</td>
+  <td>Barada</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyTextNotPresent</td>
-  <td>Templates</td>
+  <td>Nikto</td>
   <td></td>
 </tr>
 
@@ -206,7 +206,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Sections</td>
+  <td>Klaatu</td>
   <td></td>
 </tr>
 <tr>
