--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -64,7 +64,7 @@
 <tr>
 	<td>type</td>
 	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
-	<td>Sections</td>
+	<td>Klaatu</td>
 </tr>
 <tr>
 	<td>retrieveCurrentDateInfo</td>
@@ -88,18 +88,23 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Sections</td>
+	<td>Klaatu</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Workspaces</td>
+	<td>Barada</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Templates</td>
+	<td>Nikto</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyXpathCount</td>
+	<td>//form[@id=&quot;faceted_search_default&quot;]/table//tbody/tr</td>
+	<td>1</td>
 </tr>
 <tr>
 	<td>storeValue</td>
@@ -118,25 +123,29 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Sections</td>
+	<td>Klaatu</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Workspaces</td>
+	<td>Barada</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>Templates</td>
+	<td>Nikto</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyXpathCount</td>
+	<td>//form[@id=&quot;faceted_search_default&quot;]/table//tbody/tr</td>
+	<td>1</td>
 </tr>
 <tr>
 	<td>verifyNotValue</td>
 	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
