--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -16,110 +16,106 @@
   </thead>
   <tbody>
   <tr>
-    <td>open</td>
-    <td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium
-      saveSearch
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>open</td>
-    <td>logout</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>username</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>password</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>Submit</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>You are logged as Administrator</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>watchA4jRequests</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>click</td>
-    <td>
-      //a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>waitForA4jRequest</td>
-    <td>10000</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>waitForTextPresent</td>
-    <td>Keywords</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Author</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>watchA4jRequests</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>typeKeys</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggest
-    </td>
-    <td>Adm</td>
-  </tr>
-  <tr>
-    <td>waitForA4jRequest</td>
-    <td>2000</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>click</td>
-    <td>
-      xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>assertTextNotPresent</td>
-    <td>Section</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>assertTextNotPresent</td>
-    <td>Templates</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>assertTextNotPresent</td>
-    <td>This folder contains no document</td>
-    <td></td>
-  </tr>
-
-  </tbody>
+	<td>open</td>
+	<td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium<br /> saveSearch</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>logout</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>username</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>password</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>Submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>You are logged as Administrator</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Keywords</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Author</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>typeKeys</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggest</td>
+	<td>Adm</td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>2000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_people_search:nxw_dc_creator_1_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Klaatu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Barada</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextPresent</td>
+	<td>Nikto</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTextNotPresent</td>
+	<td>This folder contains no document</td>
+	<td></td>
+</tr>
+</tbody>
 </table>
 </body>
 </html>
