--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -16,217 +16,196 @@
   </thead>
   <tbody>
   <tr>
-    <td>open</td>
-    <td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium
-      dateRangeSearch
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>open</td>
-    <td>logout</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>username</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>password</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>Submit</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>You are logged as Administrator</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>watchA4jRequests</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>click</td>
-    <td>
-      //a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>waitForA4jRequest</td>
-    <td>10000</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>retrieveCurrentDateInfo</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>waitForTextPresent</td>
-    <td>Creation date</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to
-    </td>
-    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>No documents match your search criteria</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from
-    </td>
-    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Default domain</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Sections</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Templates</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Workspaces</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Modification date</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to
-    </td>
-    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>No documents match your search criteria</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_from
-    </td>
-    <td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Default domain</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Sections</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Templates</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Workspaces</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1
-    </td>
-    <td>Sections</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Sections</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextNotPresent</td>
-    <td>Templates</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextNotPresent</td>
-    <td>Workspaces</td>
-    <td></td>
-  </tr>
-
-  </tbody>
+	<td>open</td>
+	<td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium<br /> dateRangeSearch</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>logout</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>username</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>password</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>Submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>You are logged as Administrator</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>retrieveCurrentDateInfo</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Creation date</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>No documents match your search criteria</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_to</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Default domain</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Klaatu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Barada</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Nikto</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Modification date</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>No documents match your search criteria</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_from</td>
+	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_modified_1:nxw_dc_modified_1_to</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Default domain</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Klaatu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Barada</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Nikto</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>Klaatu</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Klaatu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>Barada</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>Nikto</td>
+	<td></td>
+</tr>
+</tbody>
 </table>
 </body>
 </html>
