--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -16,117 +16,111 @@
   </thead>
   <tbody>
   <tr>
-    <td>open</td>
-    <td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium
-      fullTextSearch
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>open</td>
-    <td>logout</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>username</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>password</td>
-    <td>Administrator</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>Submit</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>You are logged as Administrator</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>watchA4jRequests</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>click</td>
-    <td>
-      //a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>waitForA4jRequest</td>
-    <td>10000</td>
-    <td></td>
-  </tr>
-
-  <tr>
-    <td>waitForTextPresent</td>
-    <td>Keywords</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1
-    </td>
-    <td>Sections</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Default Faceted Search</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Sections</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextNotPresent</td>
-    <td>Workspaces</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextNotPresent</td>
-    <td>Templates</td>
-    <td></td>
-  </tr>
-
-  <tr>
-    <td>type</td>
-    <td>
-      facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1
-    </td>
-    <td>no match</td>
-  </tr>
-  <tr>
-    <td>clickAndWait</td>
-    <td>//input[@value="Go »"]</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>Default Faceted Search</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>verifyTextPresent</td>
-    <td>No documents match your search criteria</td>
-    <td></td>
-  </tr>
-
-  </tbody>
+	<td>open</td>
+	<td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium<br /> fullTextSearch</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>logout</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>username</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>password</td>
+	<td>Administrator</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>Submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>You are logged as Administrator</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//a[@id='virtualNavTreeTab:virtualNavTreeList:1:virtualNavTreeLink']/img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>Keywords</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>Klaatu</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Default Faceted Search</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Klaatu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>Barada</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>Nikto</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyXpathCount</td>
+	<td>//form[@id=&quot;faceted_search_default&quot;]/table//tbody/tr</td>
+	<td>1</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_text_search:nxw_ecm_fulltext_1</td>
+	<td>no match</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Default Faceted Search</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>No documents match your search criteria</td>
+	<td></td>
+</tr>
+</tbody>
 </table>
 </body>
 </html>
