NXP-6045: add csv export on faceted search results + follow content view template changes (empty_folder_label facelet region replaced by empty_content_view_label)

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -30,7 +30,7 @@
               </h:outputLink> </span></h1>
             </c:if>
           </ui:define>
-          <ui:define name="empty_folder_label">
+          <ui:define name="empty_content_view_label">
             <h:outputText value="#{messages['label.content.empty.search']}"
               rendered="#{documents.rowCount == 0 and not provider.hasError()}" />
           </ui:define>
