--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -78,7 +78,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
 	<td>${currentMonth}/${currentDay}/${currentYear} 00:00 AM</td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@
 </tr>
 <tr>
 	<td>verifyNotValue</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_from</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_date_search:nxw_dc_created_1:nxw_dc_created_1_fromInputDate</td>
 	<td></td>
 </tr>
 </tbody></table>
